@@ -1,10 +1,9 @@
 /*
  * "$Id$"
  *
- *   Internet Printing Protocol support functions for the Common UNIX
- *   Printing System (CUPS).
+ *   Internet Printing Protocol functions for CUPS.
  *
- *   Copyright 2007-2009 by Apple Inc.
+ *   Copyright 2007-2010 by Apple Inc.
  *   Copyright 1997-2007 by Easy Software Products, all rights reserved.
  *
  *   These coded instructions, statements, and computer programs are the
@@ -1894,6 +1893,12 @@ ippWriteIO(void       *dst,		/* I - Destination */
 	  *bufptr++ = ipp->request.any.request_id >> 8;
 	  *bufptr++ = ipp->request.any.request_id;
 
+	  DEBUG_printf(("2ippWriteIO: version=%d.%d", buffer[0], buffer[1]));
+	  DEBUG_printf(("2ippWriteIO: op_status=%04x",
+			ipp->request.any.op_status));
+	  DEBUG_printf(("2ippWriteIO: request_id=%d",
+			ipp->request.any.request_id));
+
           if ((*cb)(dst, buffer, (int)(bufptr - buffer)) < 0)
 	  {
 	    DEBUG_puts("1ippWriteIO: Could not write IPP header...");
@@ -1911,11 +1916,7 @@ ippWriteIO(void       *dst,		/* I - Destination */
 	ipp->current = ipp->attrs;
 	ipp->curtag  = IPP_TAG_ZERO;
 
-        DEBUG_printf(("2ippWriteIO: version=%d.%d", buffer[0], buffer[1]));
-	DEBUG_printf(("2ippWriteIO: op_status=%04x",
-	              ipp->request.any.op_status));
-	DEBUG_printf(("2ippWriteIO: request_id=%d",
-	              ipp->request.any.request_id));
+	DEBUG_printf(("1ippWriteIO: ipp->current=%p", ipp->current));
 
        /*
         * If blocking is disabled, stop here...
@@ -1936,23 +1937,30 @@ ippWriteIO(void       *dst,		/* I - Destination */
 
 	  ipp->current = ipp->current->next;
 
-          if (ipp->curtag != attr->group_tag && parent == NULL)
+          if (!parent)
 	  {
-	   /*
-	    * Send a group tag byte...
-	    */
+	    if (ipp->curtag != attr->group_tag)
+	    {
+	     /*
+	      * Send a group tag byte...
+	      */
 
-	    ipp->curtag = attr->group_tag;
+	      ipp->curtag = attr->group_tag;
 
-            if (attr->group_tag == IPP_TAG_ZERO)
+	      if (attr->group_tag == IPP_TAG_ZERO)
+		continue;
+
+	      DEBUG_printf(("2ippWriteIO: wrote group tag=%x(%s)",
+			    attr->group_tag, ippTagString(attr->group_tag)));
+	      *bufptr++ = attr->group_tag;
+	    }
+	    else if (attr->group_tag == IPP_TAG_ZERO)
 	      continue;
-
-            DEBUG_printf(("2ippWriteIO: wrote group tag=%x(%s)",
-	                  attr->group_tag, ippTagString(attr->group_tag)));
-	    *bufptr++ = attr->group_tag;
 	  }
-	  else if (attr->group_tag == IPP_TAG_ZERO)
-	    continue;
+
+	  DEBUG_printf(("1ippWriteIO: %s (%s%s)", attr->name,
+	                attr->num_values > 1 ? "1setOf " : "",
+			ippTagString(attr->value_tag)));
 
          /*
 	  * Write the attribute tag and name.  The current implementation
@@ -2625,15 +2633,18 @@ ippWriteIO(void       *dst,		/* I - Destination */
 	  * Write the data out...
 	  */
 
-          if ((*cb)(dst, buffer, (int)(bufptr - buffer)) < 0)
+	  if (bufptr > buffer)
 	  {
-	    DEBUG_puts("1ippWriteIO: Could not write IPP attribute...");
-	    ipp_buffer_release(buffer);
-	    return (IPP_ERROR);
-	  }
+	    if ((*cb)(dst, buffer, (int)(bufptr - buffer)) < 0)
+	    {
+	      DEBUG_puts("1ippWriteIO: Could not write IPP attribute...");
+	      ipp_buffer_release(buffer);
+	      return (IPP_ERROR);
+	    }
 
-          DEBUG_printf(("2ippWriteIO: wrote %d bytes",
-	                (int)(bufptr - buffer)));
+	    DEBUG_printf(("2ippWriteIO: wrote %d bytes",
+			  (int)(bufptr - buffer)));
+	  }
 
 	 /*
           * If blocking is disabled, stop here...
