@@ -4,6 +4,8 @@ CHANGES-1.4.txt
 CHANGES IN CUPS V1.4.4
 
 	- Documentation updates (STR #3453)
+	- ippWriteIO did not write collection (member) attributes properly in
+	  all cases (STR #3521)
 	- The "cupsctl --remote-any" and corresponding web interface check box
 	  (allow printing from the Internet) did not work reliably (STR #3520)
 	- The lpq and lpr commands would sometimes choose different default
